--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="/faze.github.io/assets/img/_frames_-16.png" alt="Logo" />
+          <img src="https://github.com/faze2ezaf/faze.github.io/blob/975c3e706187ed56abf6c1a375519bf23cba4285/assets/img/_frames_-16.png" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
